--- a/index.html
+++ b/index.html
@@ -2,16 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>igPay atinLay anslatorTray</title>
     <link rel="stylesheet" href="css/bootstrap.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
     <script src="js/jquery-1.12.0.js"></script>
     <script src="js/scripts.js"></script>
   </head>
   <div class = "container">
-  <h1>hello</h1>
-</div>
+  <h1>Hello! Welcome to our Pig Latin Translator.</h1>
   <body>
+    <form>
+      <input class = "userInput">
+      <button type="button" class="btn btn-success">anslatetray</button>
 
+    </form>
+
+</div>
   </body>
 </html>
