added basic functionality

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     <script src="js/scripts.js"></script>
   </head>
   <div class = "container">
-  <h1>Hello! Welcome to our Pig Latin Translator.</h1>
+  <h1>Hello! Welcome to our Pig Latin Translator</h1>
   <body>
     <form>
       <input class = "userInput">
       <button type="button" class="btn btn-success">anslatetray</button>
 
     </form>
-
+    <div id="result">
+            <span class="output"></span>
+    </div>
 </div>
   </body>
 </html>
