add working spec js and inital functionsl js

--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <title>igPay atinLay anslatorTray</title>
     <link rel="stylesheet" href="css/bootstrap.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
-    <script src="js/jquery-1.12.0.js"></script>
-    <script src="js/scripts.js"></script>
+
   </head>
   <div class = "container">
   <h1>Hello! Welcome to our Pig Latin Translator</h1>
   <body>
-    <form>
-      <input class = "userInput">
-      <button type="button" class="btn btn-success">anslatetray</button>
+    <form id ="pigForm">
+      <input class = "userInput"></input>
+      <button class="btn btn-success">anslatetray</button>
 
-    </form>
+     </form>
     <div id="result">
             <span class="output"></span>
     </div>
 </div>
+<script src="js/jquery-1.12.0.js"></script>
+<script src="js/scripts.js"></script>
   </body>
 </html>
